--- a/css/agency.css
+++ b/css/agency.css
@@ -715,3 +715,128 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   border-bottom: 10px solid #5D0059;
   box-sizing: border-box;
 }
+
+/*efectos de botones*/
+
+.button.type1 {
+  color: #566473;
+}
+.button.type1.type1::after, .button.type1.type1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20%;
+  height: 20%;
+  border: 2px solid;
+  transition: all 0.6s ease;
+  border-radius: 2px;
+}
+.button.type1.type1::after {
+  bottom: 0;
+  right: 0;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: #566473;
+  border-right-color: #566473;
+}
+.button.type1.type1::before {
+  top: 0;
+  left: 0;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-top-color: #566473;
+  border-left-color: #566473;
+}
+.button.type1.type1:hover:after, .button.type1.type1:hover:before {
+  width: 100%;
+  height: 100%;
+}
+
+.button {
+  position: relative;
+  padding: 1em 1.5em;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  outline: none;
+  font-size: 18px;
+  margin: 1em 0.8em;
+}
+
+/*segundo boton*/
+
+a:hover {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 35px;
+  margin: auto 0 25px;
+  color: #fff;
+  letter-spacing: 3px;
+  font-weight: 600;
+  width: 100%;
+  text-align: center;
+}
+
+.flex_container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  letter-spacing: 3px;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 40px 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.noise_btn {
+  display: block;
+  position: relative;
+  width: 282px;
+  height: 80px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  letter-spacing: 2.7px;
+  margin: 20px 30px;
+  font-size: 13px;
+  color: #fff;
+  margin-bottom: auto;
+  opacity: 0;
+}
+.noise_btn.canvas-ready {
+  opacity: 1;
+}
+.noise_btn--bg {
+  color: #202344;
+}
+.noise_btn strong {
+  position: absolute;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+}
+
+.noise-container {
+  display: block;
+  position: relative;
+}
+
+.noise-canvas {
+  position: absolute;
+  top: -20px;
+  width: calc(100% + 40px);
+  height: calc(100% + 40px);
+  left: -20px;
+  pointer-events: none;
+  z-index: 1;
+}
