--- a/css/agency.css
+++ b/css/agency.css
@@ -209,7 +209,7 @@ header.masthead .intro-text .intro-heading {
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 55px;
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 50px;
@@ -839,4 +839,77 @@ h1 {
   left: -20px;
   pointer-events: none;
   z-index: 1;
+}
+
+.tec{
+  color: #4e555b;
+  font-size: 5rem;
+}
+
+.text-1{
+  font-size: .8rem;
+}
+
+.text-2{
+  font-size: 1.5rem;
+}
+
+/*
+		==================================================================
+			efecto imagen fade-in
+		==================================================================
+*/
+
+.efect {
+  animation: bgFadeIn 1s ease-in both;
+  position: relative;
+  padding: 28px;
+  text-align: center;
+}
+
+.efect:before {
+  /*background: linear-gradient(rgba(0, 235, 235, 0.7), rgba(0, 235, 235, 0.7)),linear-gradient(rgba(0, 235, 235, 0.7), rgba(0, 235, 235, 0.7)), url("../img/diseño.jpg");*/
+  background: url("../img/diseño.jpg");
+  background-color: #CCCCCC;
+  background-attachment: fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  bottom: 0;
+  content: ' ';
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+@keyframes bgFadeIn {
+  0% {
+    background-color: white;
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+}
+.efect .container {
+  margin: 12rem auto;
+}
+.efect h1 {
+  border-bottom: 2px solid #FFFFFF;
+  border-top: 2px solid #FFFFFF;
+  color: #FFFFFF;
+  font-family: "Amatic SC", cursive;
+  font-size: 8.75rem;
+  margin: 0;
+}
+.efect h3 {
+  color: #FFF0A5;
+  font-family: "Abril Fatface", cursive;
+  font-size: 3.75rem;
+  font-style: italic;
+  font-weight: 100;
+  margin: 0;
 }
