--- a/css/agency.css
+++ b/css/agency.css
@@ -700,7 +700,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
  }
 
 .imagen-footer {
-  height: 450px;
+  height: 520px;
   padding: 10rem;
   text-align: left;
   color: white;
@@ -720,6 +720,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 .button.type1 {
   color: #566473;
+  padding: 3px;
 }
 .button.type1.type1::after, .button.type1.type1::before {
   content: "";
@@ -727,7 +728,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   position: absolute;
   width: 20%;
   height: 20%;
-  border: 2px solid;
+  border: 2px solid #5D0059;
   transition: all 0.6s ease;
   border-radius: 2px;
 }
@@ -736,16 +737,16 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   right: 0;
   border-top-color: transparent;
   border-left-color: transparent;
-  border-bottom-color: #566473;
-  border-right-color: #566473;
+  border-bottom-color: #5D0059;
+  border-right-color: #5D0059;
 }
 .button.type1.type1::before {
   top: 0;
   left: 0;
   border-bottom-color: transparent;
   border-right-color: transparent;
-  border-top-color: #566473;
-  border-left-color: #566473;
+  border-top-color: #5D0059;
+  border-left-color: #5D0059;
 }
 .button.type1.type1:hover:after, .button.type1.type1:hover:before {
   width: 100%;
@@ -886,14 +887,7 @@ h1 {
   top: 0;
   z-index: -1;
 }
-@keyframes bgFadeIn {
-  0% {
-    background-color: white;
-  }
-  100% {
-    background-color: rgba(255, 255, 255, 0);
-  }
-}
+
 .efect .container {
   margin: 12rem auto;
 }
